--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -19,9 +19,9 @@
         <% if request.fullpath == books_path %>
           <td><%= render 'favorite', book: book %></td>
           <td><%= "#{book.book_comments.count} コメント" %></td>
-        <% elsif request.fullpath == search_path %>
-        <% else %>
+        <% elsif request.fullpath == user_path(book.user_id) %>
           <td><%= "#{book.book_comments.count} コメント" %></td>
+        <% else %>
         <% end %>
       </tr>
     <% end %>
