--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,28 +1,11 @@
-<% if @range == "User" %>
-  <h2>Books search for "<%= "#{@user}" %>"</h2>
-<% else %>
-  <h2>Books search for "<%= "#{@book}" %>"</h2>
-<% end %>
-
 <table class="table table-hover table-inverse">
   <!--検索対象モデルがUserの時 -->
   <% if @range == "User" %>
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= user.name %></td>
-        </tr>
-      <% end %>
-    </tbody>
+    <h2>Books search for "<%= "#{@user}" %>"</h2>
+    <%= render 'users/index', users: @users%>
   <% else %>
     <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
-    <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td><%= book.title %></td>
-          <td><%= book.body %></td>
-        </tr>
-      <% end %>
-    </tbody>
+    <h2>Books search for "<%= "#{@book}" %>"</h2>
+    <%= render 'books/index', books: @books%>
   <% end %>
 </table>
