--- a/app/views/book_comments/_book_comment_form.html.erb
+++ b/app/views/book_comments/_book_comment_form.html.erb
@@ -10,18 +10,15 @@
         </td>
         <td><%= book_comment.comment %></td>
         <% if book_comment.user == current_user %>
-        <td><%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: 'btn-danger' %></td>
+        <td><%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, remote: true, class: 'btn-danger' %></td>
         <% end %>
       </tr>
-    <% end %> 
+    <% end %>
   </table>
 </div>
 <div>
-  <% if request.fullpath == book_path(book) %>
-    <%= form_with(model:[book, book_comment], local: true) do |f| %>
+    <%= form_with(model:[book, book_comment], remote: true ) do |f| %>
       <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
       <%= f.submit "送信" %>
     <% end %>
-  <% else %>
-  <% end %>
 </div>
