--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,14 +19,14 @@
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
           <td id="favorite_buttons_<%= @book.id %>"><%= render 'favorites/favorite', book: @book %></td>
-          <td><%= render 'book_comment', book: @book %></td>
+          <td id="comment_count"><%= render 'book_comment', book: @book %></td>
           <% if current_user.id == @book.user_id %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
-      <div><%= render 'book_comment_form', book: @book, book_comment: @book_comment %></div>
+      <div id="comment_buttons" ><%= render 'book_comments/book_comment_form', book: @book, book_comment: @book_comment %></div>
     </div>
   </div>
 </div>
