--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -23,7 +23,7 @@
     </th>
   </tr>
   <tr>
-    <td>
+    <th>
       <% if current_user == user %>
       <% else %>
         <% if current_user.following?(user) %>
@@ -32,9 +32,25 @@
           <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: 'btn btn-success' %>
         <% end %>
       <% end %>
-    </td>
+    </th>
+    <th>
+      <% if current_user == user %>
+      <% else %>
+        <% if current_user.following?(user) %>
+          <% if isRoom == true %>
+            <a href="/rooms/<%= roomId %>">chatを始める</a>
+          <% else %>
+            <%= form_for room do |f| %>
+              <%= fields_for entry do |e| %>
+                <%= e.hidden_field :user_id, value: user.id %>
+              <% end %>
+              <%= f.submit "chatを始める" %>
+            <% end %>
+          <% end %>
+        <% end %>
+      <% end %>
+    </th>
   </tr>
-
 </table>
 
 <div class='row'>
