--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,6 +23,8 @@
           <% if current_user.id == @book.user_id %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <% else %>
+          <td>閲覧数:<%= @book.impressions_count %></td>
           <% end %>
         </tr>
       </table>
