--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,7 +10,7 @@
   <tbody>
     <% books.each do |book| %>
       <tr>
-        <td><%= link_to user_path(book.user) do %>
+        <td><%= link_to user_path(book.user), data: {"turbolinks"=>false} do %>
           <%= attachment_image_tag(book.user, :profile_image, fallback: "no-image-icon.jpg",size: "50x50") %>
           <% end %>
         </td>
@@ -18,7 +18,10 @@
         <td><%= book.body %></td>
         <td id="favorite_buttons_<%= book.id %>"><%= render 'favorites/favorite', book: book %></td>
         <td><%= "コメント数: #{book.book_comments.count}" %></td>
+        <% if request.fullpath == books_path %>
         <td>閲覧数:<%= book.impressions_count %></td>
+        <% else %>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
