--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
   		<table class='table'>
   		  <tr>
   		    <td>
-  		      <%= link_to user_path(@book.user) do %>
+  		      <%= link_to user_path(@book.user), data: {"turbolinks"=>false} do %>
             <%= attachment_image_tag(@book.user, :profile_image, fallback: "no-image-icon.jpg",size: "50x50") %><br>
             <%= @book.user.name %>
             <% end %>
