--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -23,7 +23,7 @@
             <% end %>
           <% end %>
         </td>
-        <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+        <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}", data: {"turbolinks"=>false} %></td>
       </tr>
     <% end %>
   </tbody>
