--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,79 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'books/index', books: @books %>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th>今日の投稿数</th>
+            <th>前日の投稿数</th>
+            <th>前日比</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= @today_book.count %></td>
+            <td><%= @yesterday_book.count %></td>
+       　    <td>
+       　    <% if @yesterday_book.count == 0 %>
+       　    n/a
+       　    <% else %>
+       　    <%= (( @today_book.count / @yesterday_book.count.to_f) * 100).round %>%
+       　    <% end %>
+       　    </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th>今週の投稿数</th>
+            <th>前週の投稿数</th>
+            <th>前週比</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= @this_week_book.count %></td>
+            <td><%= @last_week_book.count %></td>
+          　<td>
+          　   <% if @last_week_book.count == 0 %>
+       　      n/a
+         　    <% else %>
+       　      <%= ((@this_week_book.count / @last_week_book.count.to_f) * 100).round %>%
+         　    <% end %>
+          　  </td>
+          </tr>
+        </tbody>
+      </table>
+      <h3>7日間分の投稿数</h3>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th>6日前</th>
+            <th>5日前</th>
+            <th>4日前</th>
+            <th>3日前</th>
+            <th>2日前</th>
+            <th>1日前</th>
+            <th>今日</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= @six_day_ago_book.count %></td>
+            <td><%= @five_day_ago_book.count %></td>
+            <td><%= @four_day_ago_book.count %></td>
+            <td><%= @three_day_ago_book.count %></td>
+            <td><%= @two_day_ago_book.count %></td>
+            <td><%= @yesterday_book.count %></td>
+            <td><%= @today_book.count %></td>
+          </tr>
+        </tbody>
+      </table>
+      <div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js"></script>
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
   </div>
 </div>
