--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,9 +13,10 @@
       <thead>
         <tr>
           <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-          <th colspan="3"></th>
+          <th>グループ名</th>
+          <th>紹介文</th>
+          <th>メンバー数</th>
+          <th colspan="2"></th>
         </tr>
       </thead>
       <tbody>
@@ -27,6 +28,7 @@
             </td>
             <td><%= link_to group.name, group_path(group), class: "group_#{group.id}" %></td>
             <td><%= group.introduction %></td>
+            <td><%= group.users.count %></td>
             <% if group.owner_id == current_user.id %>
             <td><%= link_to 'Edit', edit_group_path(group.id), class: "btn btn-sm btn-success" %></td>
             <% end %>
