--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -13,9 +13,10 @@
       <thead>
         <tr>
           <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-          <th colspan="3"></th>
+          <th>グループ名</th>
+          <th>紹介文</th>
+          <th>メンバー</th>
+          <th colspan="2"></th>
         </tr>
       </thead>
       <tbody>
@@ -26,8 +27,21 @@
           </td>
           <td><%= link_to @group.name, group_path(@group), class: "group_#{@group.id}" %></td>
           <td><%= @group.introduction %></td>
+          <td>
+            <% @user.each do |user| %>
+              <% if @group.users.include?(user) %>
+               <p><%= user.name %></p>
+              <% end %>
+            <% end %>
+          </td>
           <% if @group.owner_id == current_user.id %>
-          <td><%= link_to 'Edit', edit_group_path(@group.id), class: "btn btn-sm btn-success" %></td>
+            <td>Notice an Event</td>
+          <% else %>
+            <% unless @group.users.include?(current_user) %>
+              <td><%= link_to 'join this group', add_user_groups_path(@group.id), class: "btn btn-sm btn-success" %></td>
+            <% else %>
+              <td><%= link_to 'Leave this group', destroy_user_groups_path(@group.id), class: "btn btn-sm btn-denjar" %></td>
+            <% end %>
           <% end %>
         </tr>
       </tbody>
