--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,6 +10,9 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
+      <div id="order-button">
+        <%= link_to '新しい順', '/books/?option=B' %> |
+        <%= link_to '評価の高い順', '/books/?option=C' %>
       <%= render 'index', books: @books%>
     </div>
   </div>
