--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,7 +4,8 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th>Category</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +17,11 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td>
+          <%= link_to books_path(category: book.category) do %>
+            <%= book.category %>
+          <% end %>
+        </td>
         <td id="favorite_buttons_<%= book.id %>"><%= render 'favorites/favorite', book: book %></td>
         <td><%= "コメント数: #{book.book_comments.count}" %></td>
         <td>
