--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,13 @@
           <li><%= link_to ' Users',users_path,class: 'fas fa-users nav-link text-light' %></li>
           <li><%= link_to ' Books',books_path ,class: 'fas fa-book-open nav-link text-light'%></li>
           <li><%= link_to ' logout', destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
+          <li>
+            <div class='mx-auto'>
+              <%= form_tag(books_path,:method => 'get') do %>
+                <%= text_field_tag :search %>
+                <%= submit_tag '検索' %>
+              <% end %>
+          </li>
         <% else %>
           <li><%= link_to ' Home',root_path,class: 'fas fa-home nav-link text-light', data: {"turbolinks"=>false} %></li>
           <li><%= link_to ' About',home_about_path,class: 'fas fa-link nav-link text-light' %></li>
