--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -35,7 +35,7 @@
             <% end %>
           </td>
           <% if @group.owner_id == current_user.id %>
-            <td><%= link_to 'Notice an Event', new_mail_groups_path(@group.id), class: "fas fa-paper-plane" %></td>
+            <td><%= link_to 'Notice an Event', group_new_mail_path(@group), class: "fas fa-paper-plane" %></td>
           <% else %>
             <% unless @group.users.include?(current_user) %>
               <td><%= link_to 'join this group', add_user_groups_path(@group.id), class: "btn btn-sm btn-success" %></td>
