--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -36,11 +36,12 @@
           </td>
           <% if @group.owner_id == current_user.id %>
             <td><%= link_to 'Notice an Event', group_new_mail_path(@group), class: "fas fa-paper-plane" %></td>
+            <td><%= link_to 'Edit', edit_group_path(@group.id), class: "btn btn-sm btn-success" %></td>
           <% else %>
             <% unless @group.users.include?(current_user) %>
               <td><%= link_to 'join this group', add_user_groups_path(@group.id), class: "btn btn-sm btn-success" %></td>
             <% else %>
-              <td><%= link_to 'Leave this group', destroy_user_groups_path(@group.id), class: "btn btn-sm btn-denjar" %></td>
+              <td><%= link_to 'Leave this group', destroy_user_groups_path(@group.id), class: "btn btn-sm btn-danger" %></td>
             <% end %>
           <% end %>
         </tr>
