--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -37,14 +37,16 @@
       <% if current_user == user %>
       <% else %>
         <% if current_user.following?(user) %>
-          <% if isRoom == true %>
-            <a href="/rooms/<%= roomId %>">chatを始める</a>
-          <% else %>
-            <%= form_for room do |f| %>
-              <%= fields_for entry do |e| %>
-                <%= e.hidden_field :user_id, value: user.id %>
+          <% if user.following?(current_user) %>
+            <% if isRoom == true %>
+              <a href="/rooms/<%= roomId %>">chatを始める</a>
+            <% else %>
+              <%= form_for room do |f| %>
+                <%= fields_for entry do |e| %>
+                  <%= e.hidden_field :user_id, value: user.id %>
+                <% end %>
+                <%= f.submit "chatを始める" %>
               <% end %>
-              <%= f.submit "chatを始める" %>
             <% end %>
           <% end %>
         <% end %>
