--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -18,8 +18,10 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
         <td>
-          <%= link_to books_path(category: book.category) do %>
-            <%= book.category %>
+          <% book.tags.each do |tag| %>
+            <%= link_to books_path(search: tag.name) do %>
+              <%= tag.name %>
+            <% end %>
           <% end %>
         </td>
         <td id="favorite_buttons_<%= book.id %>"><%= render 'favorites/favorite', book: book %></td>
