--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,7 +18,11 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <td><%= @book.category %></td>
+          <td>
+            <% @book.tags.each do |tag| %>
+              <%= tag.name %>
+            <% end %>
+          </td>
           <td id="favorite_buttons_<%= @book.id %>"><%= render 'favorites/favorite', book: @book %></td>
           <td id="comment_count"><%= render 'book_comment', book: @book %></td>
           <td>
